模拟OOM metaspace